--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD130 Home Page</title>
 </head>
 <body>
-    <h1>All About Me</h1>
-    <h2>My name is Angeline Nyepen</h2>
-    <img src="images/pic.jpg.JPG"  alt="my pic" width="500" height="500">
-    <p>I'm Angeline, from Ghana, I love to sing, write, listen to music and read. I am a return missionary
-         and i served mission in Yamouusoukro Cote D'ivoire Mission where i studied French. I have been member for a quite long time now.
-        I am currently a teacher and an online student as well at BYU. The reason why i love BYU ia because, I understand whatever thing they teach me,
-      it is less cost and I have time to go to work.</p>
-    <p>I love watching tutorials videos on YouTube. I am happy to part of 
-        this class and i cannot wait to learn more in Web Development.</p>
-    <p>This is a picture of me at the MTC during language studies.</p>
+    <h1>Welcome to WDD130 Web Projects</h1>
+<nav>
+  <a href="aboutme/index.html">About Me Page</a>             
+  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="positioning.html">Positioning Activity</a>
+  <a href="#">Personal Website</a>
+  <a href="#">Personal Siteplan</a>
+</nav>
 </body>
 </html>
