--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 Home Page</title>
+    <title>WDD130 Angeline Nyepn</title>
 </head>
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
@@ -17,4 +17,5 @@
   <a href="#">Personal Siteplan</a>
 </nav>
 </body>
+<--https://angeline127.github.io/wdd130/--->
 </html>
