--- a/wrr/site-plan-rafting.html
+++ b/wrr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Web Developers Club Site Plan</h1>
+    <h1>White Water Rafting</h1>
     <h2>Angeline Nyepen</h2>
     <h2>WDD 130-26</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,18 +20,19 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>My purpose is help all Web Developers from all walks of life to come together and help one another in 
-        in terms of developing a website and coding, both developers can meet with the programmers and share ideas on how to build websites, programs and help other 
-        new developers.
+    <p>The purpose of White Water Rafting Website is to organize a conducive environment for people who 
+      really love adventures , going to new places, hiking and having fun time with people from around the 
+      world. I would like to be the very best company that will make these
+      exciting plans for people work.I will work together with the owners of these wonderful tourist sites and have people booked to experience this joy. 
+      There will no stress in finding these places because it will be made avaliable to the individual. Hospitality will be hallmark of our team.
     </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>My target audience will be Web developers and programmers in the world who have passion in the job and they
-        are willing to help one another. So I believe there are develops and programmers out there who
-        do not have contact with others around the world and who may have problem with building sites, or ideas
-        on a site, so we can all come together as one team and share these ideas. My audience will access my site
-        on desktop, laptop and mobile devices. All you need is an internet and you are good to go.
+    <p>The audience for my site will be 40 to 80 per a day. It will be very fun, because it will be done in a group,
+      it could be students, family, church, community among others. There will be first aid avaliable in case a customer is injured. These tourist sites will be
+      avaliable on my website. Free drinks will be available for kids. My audience can access my website on phone, computers and laptop at their 
+      convenience.
     </p>
     <!-- change this -->
 
