--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -32,10 +32,9 @@
 
       <h3>Audience</h3>
       <p>
-        The audience for my site will be 40 to 80 per a day. It will be very fun, because it will be done in a group,
-        it could be students, family, church, community among others. There will be first aid avaliable in case a customer is injured. These tourist sites will be
-        avaliable on my website. Free drinks will be available for kids. My audience can access my website on phone, computers and laptop at their 
-        convenience.
+        The audience for my site will be around 100 to 150 girls. They will be female form all walks of life, their ages to be part of this club will be
+        solely on their interest. It doesn't matter your age to join this club. Do you want to code? and you aren't getting the whole concept 
+        of coding like a pro? Well you will only need a laptop and an internet to get you started.
       </p>  <!-- change this -->
 
       <hr>
