--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -55,13 +55,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/253849-798e98-11234a-ab7e5a-4a7c59" target="_blank">https://coolors.co/253849-798e98-11234a-ab7e5a-4a7c59</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary"> #242d35</td><td class="secondary"> #cdd5d9</td><td class="accent1">#728da1</td><td class="accent2">#b7a393</td></tr>
+        <tr><td class="primary"> #253849</td><td class="secondary"> #798E98</td><td class="accent1">#062E84</td><td class="accent2">#AB7E5A</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -75,7 +75,7 @@
         Heading Font: Playfair Display  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Quicksand, Helvetica, sans-serif  <!-- change this -->
+        Paragraph Font: Lato, Helvetica, sans-serif  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
