--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -75,7 +75,7 @@
         Heading Font: Playfair Display  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Lato, Helvetica, sans-serif  <!-- change this -->
+        Paragraph Font: Roboto, Lato, Qucik-sand, sans-serif  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
