--- a/wrr/site-plan-rafting.html
+++ b/wrr/site-plan-rafting.html
@@ -131,7 +131,7 @@
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="https://wireframe.cc/pro/pp/01d92c133556757" alt="page 2 wireframe"> 
   </main>
 </body>
 
