--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -98,8 +98,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Coding Ideas</a>
+        <a href="#">About me</a>
       </nav>
       <hr>
       <h2>
@@ -110,10 +110,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Coding Ideas <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          About me  <!-- change this -->
         </div>
 
         <div class="top">
@@ -142,7 +142,7 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Coding Ideas</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
@@ -151,7 +151,7 @@
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About me</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
@@ -173,13 +173,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Coding Ideas</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>About me</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
