--- a/wrr/site-plan-rafting.html
+++ b/wrr/site-plan-rafting.html
@@ -131,7 +131,7 @@
 
     <h3>[Page 2]</h3>
 
-    <img src="https://gomockingbird.com/projects/aukv4hk" alt="page 2 wireframe"> 
+    <img src="images/wireframe.png" alt="page 2 wireframe"> 
   </main>
 </body>
 
