--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -138,8 +138,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="IMAGE/THREE.jpg" alt="image for homepage" width="50%" height="50%">
+        <img src="IMAGE/FIVE.jpg" alt="image for homepage"  width="50%" height="50%">
 
       </ul>
       <h3>Coding Ideas</h3>
@@ -147,8 +147,8 @@
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="IMAGE/SIX.jpg" alt="image for page"  width="50%" height="50%">
+        <img src="IMAGE/FOUR.jpg" alt="image for page"  width="50%" height="50%">
 
       </ul>
       <h3>About me</h3>
@@ -156,8 +156,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="IMAGE/TWO.jpg" alt="image for page3"  width="50%" height="50%">
+        <img src="IMAGE/ONE.jpg" alt="image for page3" width="50%" height="50%">
 
       </ul>
       <hr>
