--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -134,28 +134,50 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
-      </p>
+      <center><p>
+        Coding should not be only limited to people who have the background in coding or studied programming. 
+        It should be for all, both men and women. Most people believe women cannot not code and programming are only for men.
+         That is  why created this website believing that everyone can follow their passion irrespective of their gender. On my site, 
+         women from all walks of life will join,
+         together we will help ourselves to improve; together we stand.
+      </p></center>
+       
+    
       <p>Images for the Home page</p>
         <img src="IMAGE/THREE.jpg" alt="image for homepage" width="50%" height="50%">
         <img src="IMAGE/FIVE.jpg" alt="image for homepage"  width="50%" height="50%">
 
       </ul>
       <h3>Coding Ideas</h3>
-      <p>
-        [Written copy for the Page 2 here]
-      </p>
-      <p>Images for the Page 2</p>
+      <center><p>
+        People will come to my site because it will be my site because it will be available to them and
+        they can come from any background they just need the passion to join.
+        The questions that I will ask my visitors is as follows:
+        <br>
+        What is your full name?
+        <br>
+        Where do you come from?
+        <br>
+        Are you passionate about coding?
+        <br>
+        What time will you be available to join our class online?
+        <br>
+        There will be online service that will be answering all questions concerning coding errors.
+        Visitors will come to my site because my website will be user friendly 
+
+      </p></center>
+      <p>Images for the Coding Ideas</p>
         <img src="IMAGE/SIX.jpg" alt="image for page"  width="50%" height="50%">
         <img src="IMAGE/FOUR.jpg" alt="image for page"  width="50%" height="50%">
 
       </ul>
       <h3>About me</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
-      <p>Images for the Page 3</p>
+      <center><p>
+        I am a young lady who have the desire to helps women across the world. I love to sing, write and most at times code. 
+        I always watch videos about programming.
+         I am so glad you join my site; you will always feel welcome at my site.
+      </p></center>
+      <p>Images for the About me</p>
         <img src="IMAGE/TWO.jpg" alt="image for page3"  width="50%" height="50%">
         <img src="IMAGE/ONE.jpg" alt="image for page3" width="50%" height="50%">
 
