--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
+      <h1>Charlie Girls Coding Site Plan</h1>
       <h2>Angeline Nyepen</h2>
       <h2>WDD 130-26</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
