--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -191,21 +191,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+          I will share our programs with others images here.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="IMAGE/home.png" alt="home page wireframe">
 
       <h3>Coding Ideas</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The audience and the coding ideas will go here.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="IMAGE/code.png" alt="page 2 wireframe">
 
       <h3>About me</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+    I will add icons at the about programs but not images.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="IMAGE/about.png" alt="page 3 wireframe">
     </main>
   </body>
 
