--- a/wrr/sub-page.html
+++ b/wrr/sub-page.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="column">
-                <img class="text" src="images/piccs.jpg" alt="yoga">
+                <img class="text" src="images/boat.jpg" alt="yoga">
             </div>
         </div>
     
