--- a/wrr/contactus.html
+++ b/wrr/contactus.html
@@ -109,6 +109,8 @@
         </style>
         <main>
 
+            <div id="feedback"></div>
+
             <form action="/my-handling-form-page" method="post">
                 <ul>
                     <li>
