--- a/web/about.html
+++ b/web/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Charlie Girls Coding</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
         <!--- header/nav -->
         <header>
             <a id="logo_link" href="index.html">
-                <img src="images/logo.png" alt="Charlie Logo">
+                <img src="IMAGE/cgc.jpeg" alt="Charlie Logo">
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="ideas.html">Coding Ideas</a>
@@ -23,14 +24,38 @@
 
 
         <!--- our programs -->
-        <main>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
+        <main class="program-grid">
+            <div class="one">
+                <section class="html-card">
+                    <box-icon type='logo' name='html5'></box-icon>
+                    <p>html</p>
+                </section>
+                <section class="css-card">
+                    <box-icon name='css3' type='logo'></box-icon>
+                    <p>css</p>
+                </section>
+                <section class="js-card">
+                    <box-icon name='javascript' type='logo'></box-icon>
+                    <p>javascript</p>
+                </section>
+            </div>
+            <div>
+
+                <section class="py-card">
+                    <box-icon name='python' type='logo'></box-icon>
+                    <p>python</p>
+                </section>
+                <section class="java-card">
+                    <box-icon type='logo' name='java'></box-icon>
+                    <p>java</p>
+                </section>
+                <section class="bug-card">
+                    <box-icon name='bug'></box-icon>
+                    <p>debugging</p>
+                </section>
+            </div>
         </main>
+
 
         <!--- mission/vision -->
         <div>
