--- a/web/ideas.html
+++ b/web/ideas.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Charlie Girls Coding</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img src="images/logo.png" alt="Charlie Logo">
+                <img src="IMAGE/cgc.jpeg" alt="Charlie Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
