--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charlie Girls Coding</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
         <!--- header/nav -->
         <header>
             <a id="logo_link" href="index.html">
-                <img src="images/logo.png" alt="Charlie Logo">
+                <img src="IMAGE/cgc.jpeg" alt="Charlie Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
