--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charlie Girls Coding</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="STYLE/style.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <!--- header/nav -->
         <header>
             <a id="logo_link" href="index.html">
-                <img src="IMAGE/cgc.jpeg" alt="Charlie Logo">
+                <img src="IMAGE/cgc.png" alt="Charlie Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -25,8 +25,8 @@
 
         <!--- banner/ text -->
         <div id="banner">
-            <div id="banner-box">
-                <img id="banner-img" src="IMAGE/THREE.jpg" alt="ladies discussing">
+            <div id="banner-container">
+                <img id="banner-img" src="IMAGE/THREE.png" alt="ladies discussing">
             </div>
             <section id="welcome-msg">
                 <h4>Welcome to Charlie Girls Coding! </h4>
@@ -40,17 +40,18 @@
 
 
         <!--- purpose/text -->
+        <h4 id="line">Purpose</h4>
         <div class="purpose">
             <section>
-                <h4>Purpose</h4>
-                <p>I am a girl who loves to code, I have built websites for top companies in the world. When you need a
+             
+                <p id="text">I am a girl who loves to code, I have built websites for top companies in the world. When you need a
                     place where they teach girls coding, where do you? Do you know that girls can code very well when
                     they
                     are being taught
                     very well? That is what my Business does. </p>
             </section>
             <section>
-                <p>We teach girls coding, we explain the importance of why a girl should code,
+                <p id="text">We teach girls coding, we explain the importance of why a girl should code,
                     regardless of her age, knowledge about coding, and the current field she is pursuing. Are you a girl
                     who
                     wants to learn
@@ -66,10 +67,10 @@
 
 
         <!--- programs/text -->
+        <h2 class="topic">About Programs</h2>
         <main class="home-grid">
-            <div>About Programs</div>
             <section class="programs-card">
-                <img class="program-img" src="IMAGE/FIVE.jpg" alt="students">
+                <img class="program-img" src="IMAGE/FIVE.png" alt="students">
                 <h4>Online Study Programs</h4>
                 <p>There will be classes each week for all. We will begin by getting to know the basics, then we move on
                     to the intermediate and the we will move on to a pro yeah! all will be how consistent you are;
@@ -79,7 +80,7 @@
                 </p>
             </section>
             <section class="quiz-card">
-                <img class="quiz-img" src="IMAGE/SIX.jpg" alt="computer coding">
+                <img class="quiz-img" src="IMAGE/SIX.png" alt="computer coding">
                 <h4>Weekly Quiz</h4>
                 <p>The particpants will be quiz every week based on what they learnt in the week. It will be fun because
                     there will be a reward for the person who will make it to the top three after all the programs. We
@@ -90,7 +91,7 @@
                 </p>
             </section>
             <section class="teach-card">
-                <img class="teach-img" src="IMAGE/FOUR.jpg" alt="ladies in a group">
+                <img class="teach-img" src="IMAGE/FOUR.png" alt="ladies in a group">
                 <h4>Teach One Another</h4>
                 <p>Charlie Girls coding is a club that will be there forever. This teach one another will be
                     a place where by a novice can ask a pro a question or, a pro can teach a noivce when they a stuck
@@ -109,13 +110,13 @@
             <h3><a href="#">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com" target="blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="IMAGE/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="IMAGE/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="IMAGE/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
