--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -121,9 +121,9 @@
     </h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Coding Ideas</a>
-      <a href="#">About me</a>
+      <a href="index.html">Home</a>
+      <a href="ideas.html">Coding Ideas</a>
+      <a href="about.html">About me</a>
     </nav>
     <hr>
     <h2>
