--- a/web/about.html
+++ b/web/about.html
@@ -100,7 +100,7 @@
         <footer>
             <h3>CGC &copy; 2022 - Charlie Girls Code</h3>
             <h3><a href="site-plan.html">Site Plan</a></h3>
-            <h3><a href="#">Contact Us</a></h3>
+            <h3><a href="contact.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com" target="blank">
                     <img src="images/facebook.png" alt="fb icon">
