--- a/web/contact.html
+++ b/web/contact.html
@@ -25,7 +25,7 @@
 
         <main>
             <div id="feedback"></div>
-            <h3 style=" font-family: Playfair Display; text-align: center; color: rgb(30, 21, 57);">Contact Form</h3>
+            <h3 style=" font-family: Playfair Display;  color: rgb(30, 21, 57);">Contact Form</h3>
             <div class="container">
                 <form action="/action_page.php">
                     <label for="fname">First Name</label>
