--- a/web/contact.html
+++ b/web/contact.html
@@ -23,57 +23,54 @@
             </nav>
         </header>
 
-        <main>
-            <div id="feedback"></div>
-            <h3 style=" font-family: Playfair Display; text-align: center; color: rgb(30, 21, 57);">Contact Form</h3>
-            <div class="container">
-                <form action="/action_page.php">
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <main></main>
 
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <div id="feedback"></div>
+        <h3 style=" font-family: Playfair Display; text-align: center; color: rgb(30, 21, 57);">Contact Form</h3>
+        <div class="container">
+            <form action="/action_page.php">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-                    <label for="ename">Email Address</label>
-                    <input type="text" id="ename" name="email" placeholder="Your email address..">
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-
-                    <label for="continent">Continent</label>
-                    <select id="continent" name="continent">
-                        <option value="asia">Asia</option>
-                        <option value="africa">Africa</option>
-                        <option value="europe">Europe</option>
-                        <option value="north america">North America</option>
-                    </select>
-
-                    <label for="subject">Subject</label>
-                    <textarea id="subject" name="subject" placeholder="Write something.."
-                        style="height:200px"></textarea>
-
-                    <input type="submit" value="Submit">
-                </form>
-        </main>
+                <label for="ename">Email Address</label>
+                <input type="text" id="ename" name="email" placeholder="Your email address..">
 
 
-    </div>
+                <label for="continent">Continent</label>
+                <select id="continent" name="continent">
+                    <option value="asia">Asia</option>
+                    <option value="africa">Africa</option>
+                    <option value="europe">Europe</option>
+                    <option value="north america">North America</option>
+                </select>
 
-    <!--- footer/site-plan -->
-    <footer>
-        <h3>CGC &copy; 2022 - Charlie Girls Code</h3>
-        <h3><a href="site-plan.html">Site Plan</a></h3>
-        <h3><a href="contact.html">Contact Us</a></h3>
-        <div class="social">
-            <a href="https://facebook.com" target="blank">
-                <img src="IMAGE/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com" target="blank">
-                <img src="IMAGE/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com" target="blank">
-                <img src="IMAGE/instagram.png" alt="instagram icon">
-            </a>
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
         </div>
-    </footer>
+
+        <!--- footer/site-plan -->
+        <footer>
+            <h3>CGC &copy; 2022 - Charlie Girls Code</h3>
+            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a href="contact.html">Contact Us</a></h3>
+            <div class="social">
+                <a href="https://facebook.com" target="blank">
+                    <img src="IMAGE/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="blank">
+                    <img src="IMAGE/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="blank">
+                    <img src="IMAGE/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
     </div>
 
     <script>
