--- a/web/ideas.html
+++ b/web/ideas.html
@@ -11,9 +11,10 @@
 
 <body>
     <div id="content">
+        <!--- header/nav -->
         <header>
             <a id="logo_link" href="index.html">
-                <img src="IMAGE/cgc.jpeg" alt="Charlie Logo">
+                <img src="IMAGE/cgc.png" alt="Charlie Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -25,7 +26,7 @@
         <!--- banner -->
         <div id="banner">
             <div id="banner-box">
-                <img id="banner-img" src="IMAGE/FOUR.jpg" alt="ladies in a group">
+                <img id="banner-img" src="IMAGE/FOUR.png" alt="ladies in a group">
             </div>
         </div>
 
