--- a/web/ideas.html
+++ b/web/ideas.html
@@ -44,7 +44,7 @@
         <!--- programs/text -->
         <main class="ideas-grid">
             <section class="aud-box">
-                <h2>Audience</h2>
+                <h2 id="new">Audience</h2>
                 <p>The audience for my site will be around 100 to 150 girls. They will be female form all walks of life,
                     their ages to be part of this club will be
                     solely on their interest. It doesn't matter your age to join this club. Do you want to code? and you
@@ -52,7 +52,7 @@
                     of coding like a pro? Well you will only need a laptop and an internet to get you started.</p>
             </section>
             <section class="cod-box">
-                <h2>Coding Ideas</h2>
+                <h2 id="new">Coding Ideas</h2>
                 <p>People will come to my site because it will be my site because it will be available to them and
                     they can come from any background they just need the passion to join.
                     The questions that I will ask my visitors is as follows:
@@ -75,13 +75,13 @@
             <h3><a href="contact.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com" target="blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="IMAGE/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="IMAGE/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="IMAGE/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
