--- a/web/index.html
+++ b/web/index.html
@@ -91,7 +91,7 @@
                 </p>
             </section>
             <section class="teach-card">
-                <img class="teach-img" src="IMAGE/FOUR.png" alt="ladies in a group">
+                <img class="teach-img" src="IMAGE/null.png" alt="ladies in a group">
                 <h4>Teach One Another</h4>
                 <p>Charlie Girls coding is a club that will be there forever. This teach one another will be
                     a place where by a novice can ask a pro a question or, a pro can teach a noivce when they a stuck
