--- a/web/about.html
+++ b/web/about.html
@@ -14,7 +14,7 @@
         <!--- header/nav -->
         <header>
             <a id="logo_link" href="index.html">
-                <img src="IMAGE/cgc.jpeg" alt="Charlie Logo">
+                <img src="IMAGE/cgc.png" alt="Charlie Logo">
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="ideas.html">Coding Ideas</a>
@@ -107,13 +107,13 @@
             <h3><a href="contact.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com" target="blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="IMAGE/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="IMAGE/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="IMAGE/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
