--- a/web/ideas.html
+++ b/web/ideas.html
@@ -70,9 +70,11 @@
 
         <!--- footer -->
         <footer>
-            <h3>CGC &copy; 2022 - Charlie Girls Code</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
-            <h3><a href="contact.html">Contact Us</a></h3>
+            <div>
+                <h3>CGC &copy; 2022 - Charlie Girls Code</h3>
+                <h3><a href="site-plan.html">Site Plan</a></h3>
+                <h3><a href="contact.html">Contact Us</a></h3>
+            </div>
             <div class="social">
                 <a href="https://facebook.com" target="blank">
                     <img src="IMAGE/facebook.png" alt="fb icon">
