--- a/web/index.html
+++ b/web/index.html
@@ -43,8 +43,9 @@
         <h4 id="line">Purpose</h4>
         <div class="purpose">
             <section>
-             
-                <p id="text">I am a girl who loves to code, I have built websites for top companies in the world. When you need a
+
+                <p id="text">I am a girl who loves to code, I have built websites for top companies in the world. When
+                    you need a
                     place where they teach girls coding, where do you? Do you know that girls can code very well when
                     they
                     are being taught
@@ -105,9 +106,11 @@
 
         <!--- footer/site-plan -->
         <footer>
-            <h3>CGC &copy; 2022 - Charlie Girls Code</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
-            <h3><a href="contact.html">Contact Us</a></h3>
+            <div>
+                <h3>CGC &copy; 2022 - Charlie Girls Code</h3>
+                <h3><a href="site-plan.html">Site Plan</a></h3>
+                <h3><a href="contact.html">Contact Us</a></h3>
+            </div>
             <div class="social">
                 <a href="https://facebook.com" target="blank">
                     <img src="IMAGE/facebook.png" alt="fb icon">
