--- a/web/about.html
+++ b/web/about.html
@@ -88,7 +88,7 @@
                 <img id="founder-img" src="IMAGE/TWO.jpg" alt="founder">
             </section>
             <section>
-                <h2>Founder</h2>
+                <h2 class="fond">Founder</h2>
                 <p>
                     I am a young lady who have the desire to helps women across the world. I love to sing, write and
                     most at times
