--- a/web/ideas.html
+++ b/web/ideas.html
@@ -53,7 +53,7 @@
             </section>
             <section class="cod-box">
                 <h2 id="new">Coding Ideas</h2>
-                <p>People will come to my site because it will be my site because it will be available to them and
+                <p>People will come to my site because, my site will be available to them and
                     they can come from any background they just need the passion to join.
                     The questions that I will ask my visitors is as follows:
                     What is your full name?
