--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
                 <h4>Welcome to Charlie Girls Coding! </h4>
                 <p>Charlie is proud to have you join the club, we are here to help and encourage each other. We are a
                     nonprofit club dedicated
-                    to delivering quality service to all women around the world. All of our proceeds contribute to
+                    to delivering quality services to all women around the world. All of our proceeds contribute to
                     building a state-of-the-art in technology in the world.
                 </p>
             </section>
@@ -74,10 +74,10 @@
                 <img class="program-img" src="IMAGE/FIVE.png" alt="students">
                 <h4>Online Study Programs</h4>
                 <p>There will be classes each week for all. We will begin by getting to know the basics, then we move on
-                    to the intermediate and the we will move on to a pro yeah! all will be how consistent you are;
-                    we will learn programs like python, javascript, java, sql etc.. We will also learn web developemnt
+                    to the intermediate and the we will move on to a pro yeah! All will be how consistent you are;
+                    we will learn programs like Python, Javascript, Java, sql etc.. We will also learn web developemnt
                     that will be
-                    html, css and javascript. There will also be UI UX design learn. Girl it will be an awesome journey.
+                    Html, Css and Javascript. There will also be UI UX design learn. Girl it will be an awesome journey.
                 </p>
             </section>
             <section class="quiz-card">
