--- a/web/site-plan.html
+++ b/web/site-plan.html
@@ -23,7 +23,7 @@
     <p>I am a girl who loves to code, I have built websites for top companies in the world. When you need a
       place where they teach girls coding, where do you? Do you know that girls can code very well when they are being
       taught
-      very well? That is what my Business does. We teach girls coding, we explain the importance of why a girl should
+      very well? That is what my Business does. We teach girls coding, we explain the importance of why a girl should 
       code,
       regardless of her age, knowledge about coding, and the current field she is pursuing. Are you a girl who wants to
       learn
@@ -179,9 +179,9 @@
     <h4>Online Study Programs</h4>
     <p>There will be classes each week for all. We will begin by getting to know the basics, then we move on
       to the intermediate and the we will move on to a pro yeah! all will be how consistent you are;
-      we will learn programs like python, javascript, java, sql etc.. We will also learn web developemnt
+      we will learn programs like Python, Javascript, Java, Sql etc.. We will also learn web developemnt
       that will be
-      html, css and javascript. There will also be UI UX design learn. Girl it will be an awesome journey.
+      Html, Css and Javascript. There will also be UI UX design learn. Girl it will be an awesome journey.
     </p>
     <h4>Weekly Quiz</h4>
     <p>The particpants will be quiz every week based on what they learnt in the week. It will be fun because
