--- a/web/about.html
+++ b/web/about.html
@@ -43,7 +43,7 @@
                     <p>javascript</p>
                 </section>
             </div>
-            <div class="two">  
+            <div class="two">
                 <section class="py-card" style="
     text-align: center;
 ">
@@ -70,7 +70,7 @@
                 <button>
                     <a class='mission' href="index.html">Our Mission</a>
                 </button>
-                
+
 
                 <p>Our mission is we will work to put the power of computing and programming into the hands of the women
                     across the world
@@ -79,8 +79,9 @@
                     and tailored to meet the unique needs of each woman in our club.</p>
             </section>
             <section class="vis">
-
-                <a class='vision' href="index.html">Our Vision</a>
+                <button>
+                    <a class='vision' href="index.html">Our Vision</a>
+                </button>
 
                 <p>Our vision is to ensure that every girl find passion and love for technology and coding as a whole,
                     we would also like to create an atmosphere where by women will feel confident
